--- a/package.json
+++ b/package.json
@@ -6,14 +6,27 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.0",
+    "add-to-calendar-button-react": "^2.2.8",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.8.0",
+    "react-bootstrap-daterangepicker": "^8.0.0",
+    "react-calendar": "^4.3.0",
+    "react-datepicker": "^4.16.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
